# cheese-chatter

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  langgraph.json  main.py  pyproject.toml  requirements.txt  runnable.ipynb  setup.py  template.py
config/: config.yaml  config.yml
research/dl_model_as_tool/: automated_training.py  vit_dl.ipynb
research/dl_model_as_tool/model_arch/: sequential_cnn.py  test_battery.py
research/llm_evaluation_mlflow/: clasification_evaluation_mlflow.ipynb  custom_llm_evaluation_mlflow.ipynb
src/cheese/: __init__.py  graph.py  workflow_builder.py
src/cheese/components/: cheeseagent_runnable.py  main_model_chained.py
src/cheese/components/edges/: should_continue.py  should_continue_edge.py
src/cheese/components/nodes/: call_model_chained.py
src/cheese/components/runnables/: cheeseagent.py
src/cheese/components/tools/: evolution_tool.py  evolutiontool.py  get_evolution.py  messagesvault_tool.py
src/cheese/config/: config_graph.py  config_history.py  config_input.py  config_manager.py  config_nodes.yml  config_prompting.py
src/cheese/config/cheeseagent/: fewshot_config.py  prompting_config.py
src/cheese/constants/: __init__.py
src/cheese/entity/: config_edge.py  config_input_tools.py  config_inputgraph.py  config_tools.py  edge.py  graph_layout.py  input_tools.py  langrunnable.py  node.py  runnable_builder.py  statehandler.py
src/cheese/managers/: edge_manager.py  node_manager.py
src/cheese/services/: llm_services.py
src/cheese/utils/: common.py  type_vars.py
(+25 files in other folders)
